--- a/.github/workflows/get-uri.yml
+++ b/.github/workflows/get-uri.yml
@@ -15,17 +15,21 @@ jobs:
         with:
           go-version: '1.21'
 
-      # --- مرحله جدید و اصلاح شده ---
+      # --- مرحله نهایی و اصلاح شده ---
       - name: Initialize Go module and Install Dependencies
         run: |
-          # ابتدا یک ماژول Go را راه‌اندازی می‌کند تا دستورات بعدی کار کنند
+          # ۱. ماژول Go را راه‌اندازی می‌کند
           echo "Initializing Go module..."
           go mod init geturi
 
-          # سپس کتابخانه‌های رسمی مورد نیاز را نصب می‌کند
+          # ۲. کتابخانه‌های اصلی را نصب می‌کند
           echo "Installing 0G Storage and Ethereum libraries..."
           go get github.com/0glabs/0g-storage-client
           go get github.com/ethereum/go-ethereum
+
+          # ۳. تمام وابستگی‌ها را همگام‌سازی و فایل go.sum را کامل می‌کند
+          echo "Tidying and syncing all module dependencies..."
+          go mod tidy
 
       - name: Run the script to get URI
         env:
