--- a/.github/workflows/get-uri.yml
+++ b/.github/workflows/get-uri.yml
@@ -7,7 +7,7 @@ jobs:
   get-uri-job:
     runs-on: ubuntu-latest
     steps:
-      # ۱. نصب پیش‌نیازها: Go و Git
+      # ۱. نصب پیش‌نیازها
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -20,12 +20,11 @@ jobs:
           repository: 0glabs/0g-storage-client
           path: 0g-storage-client
 
-      # ۳. ساخت (Build) فایل اجرایی CLI از سورس کد
+      # ۳. ساخت (Build) فایل اجرایی CLI
       - name: Build the CLI Binary
         run: |
           cd 0g-storage-client
           go build
-          # فایل اجرایی ساخته شده را به یک مسیر قابل دسترس منتقل می‌کنیم
           mv 0g-storage-client ../zg_storage
 
       # ۴. آپلود فایل تستی با استفاده از CLI ساخته شده
@@ -38,16 +37,16 @@ jobs:
           echo "This is the final test file." > testfile.txt
           
           echo "Uploading the file using the official CLI..."
-          # اجرای دستور آپلود دقیقا مطابق مستندات
-          # از 'tee' استفاده می‌کنیم تا خروجی هم در لاگ نمایش داده شود و هم قابل استفاده باشد
+          
           UPLOAD_OUTPUT=$(./zg_storage upload \
             --url "https://evmrpc-testnet.0g.ai" \
             --indexer "https://indexer-storage-testnet-turbo.0g.ai" \
             --key "$PRIVATE_KEY" \
             --file ./testfile.txt | tee /dev/stderr)
           
-          # استخراج هش فایل (Root Hash) از خروجی
-          ROOT_HASH=$(echo "$UPLOAD_OUTPUT" | grep "Root hash" | awk '{print $3}')
+          # --- دستور استخراج هش در اینجا اصلاح شده است ---
+          # به جای "Root hash" به دنبال "root =" می‌گردد
+          ROOT_HASH=$(echo "$UPLOAD_OUTPUT" | grep "file uploaded, root =" | awk '{print $NF}')
           echo "Extracted Root Hash: $ROOT_HASH"
           
           # ذخیره کردن هش برای استفاده در مرحله بعد
